// CDM rut gon nhung day du bang cho luan van
// Paste vao https://dbdiagram.io
// Nguyen tac: du tat ca bang/model chinh cua project, chi giu thuoc tinh
// nghiep vu tieu bieu de so do ngan, dep va de giai thich.

Table users {
  _id ObjectId [pk]
  fullName varchar [not null]
  phone varchar
  email varchar [not null, unique]
  password varchar [not null]
  avatar varchar
  role varchar
  isActive boolean
}

Table fields {
  _id ObjectId [pk]
  fieldName varchar [not null]
  type varchar [not null]
  address varchar [not null]
  image varchar
  description text
  status varchar
  ratingAverage decimal
  pricingRules text
}

Table pricing_rules {
  _id ObjectId [pk]
  ruleName varchar [not null]
  startTime varchar [not null]
  endTime varchar [not null]
  price decimal [not null]
  dayType varchar
  isPeakHour boolean
}

Table services {
  _id ObjectId [pk]
  name varchar [not null, unique]
  description text
  image varchar
  price decimal [not null]
  stock int
  inventoryType varchar
  isActive boolean
  appliedFields text
}

Table bookings {
  _id ObjectId [pk]
  user ObjectId
  field ObjectId [not null]
  voucherId ObjectId
  reviewId ObjectId
  date varchar [not null]
  startTime varchar [not null]
  endTime varchar [not null]
  services text
  totalPrice decimal [not null]
  discountAmount decimal
  finalAmount decimal
  paymentMethod varchar
  paymentStatus varchar
  status varchar
  holdExpiresAt datetime
  isRecurring boolean
  customerName varchar
  customerPhone varchar
  cancelReason text
}

Table recurring_bookings {
  _id ObjectId [pk]
  customer ObjectId
  court ObjectId [not null]
  createdBy ObjectId
  startDate varchar [not null]
  endDate varchar [not null]
  daysOfWeek text
  startTime varchar [not null]
  endTime varchar [not null]
  bookingIds text
  paymentStatus varchar
  status varchar
}

Table payments {
  _id ObjectId [pk]
  bookingId ObjectId [not null]
  userId ObjectId [not null]
  amount decimal [not null]
  method varchar [not null]
  provider varchar
  txnRef varchar [unique]
  transactionNo varchar
  status varchar
  paidAt datetime
}

Table vouchers {
  _id ObjectId [pk]
  code varchar [not null, unique]
  name varchar [not null]
  discountType varchar
  discountValue decimal
  maxDiscount decimal
  minOrderAmount decimal
  usageLimit int
  usedCount int
  perUserLimit int
  applyType varchar
  status varchar
  startDate datetime [not null]
  endDate datetime [not null]
}

Table user_vouchers {
  _id ObjectId [pk]
  userId ObjectId [not null]
  voucherId ObjectId [not null]
  code varchar
  usedCount int
  status varchar
  assignedAt datetime
  usedAt datetime
}

Table reviews {
  _id ObjectId [pk]
  user ObjectId [not null]
  booking ObjectId [not null]
  field ObjectId
  service ObjectId
  rating int [not null]
  fieldQuality int
  serviceQuality int
  cleanliness int
  priceReasonable int
  comment text [not null]
  isHidden boolean
}

Table notifications {
  _id ObjectId [pk]
  user ObjectId [not null]
  title varchar [not null]
  message text [not null]
  type varchar [not null]
  relatedModel varchar
  relatedId ObjectId
  isRead boolean
}

Table conversations {
  _id ObjectId [pk]
  userId ObjectId [not null]
  assignedAdminId ObjectId
  status varchar
  lastMessage text
  unreadByUser int
  unreadByAdmin int
}

Table messages {
  _id ObjectId [pk]
  conversationId ObjectId [not null]
  senderId ObjectId [not null]
  senderRole varchar [not null]
  content text
  type varchar
  status varchar
}

Table chat_sessions {
  _id ObjectId [pk]
  userId ObjectId [not null]
  relatedBooking ObjectId
  messages text
}

Table news {
  _id ObjectId [pk]
  title varchar [not null]
  slug varchar [unique]
  summary text
  content text [not null]
  thumbnail varchar
  author ObjectId
  status varchar
  isFeatured boolean
  publishedAt datetime
}

Table contacts {
  _id ObjectId [pk]
  fullName varchar [not null]
  email varchar [not null]
  phone varchar [not null]
  category varchar [not null]
  subject varchar [not null]
  message text [not null]
  status varchar
  adminReply text
}

Table banners {
  _id ObjectId [pk]
  title varchar [not null]
  subtitle varchar
  image varchar [not null]
  buttonText varchar
  buttonLink varchar
  voucherCode varchar
  position varchar
  order int
  isActive boolean
}

Table policies {
  _id ObjectId [pk]
  type varchar [not null, unique]
  title varchar [not null]
  content text [not null]
  updatedBy ObjectId
}

Table otps {
  _id ObjectId [pk]
  email varchar [not null, unique]
  otpHash varchar [not null]
  expiresAt datetime [not null]
  verified boolean
  attempts int
}

TableGroup "Nghiep vu dat san" {
  users
  fields
  pricing_rules
  services
  bookings
  recurring_bookings
  payments
  vouchers
  user_vouchers
  reviews
}

TableGroup "Tuong tac va ho tro" {
  notifications
  conversations
  messages
  chat_sessions
  contacts
}

TableGroup "Noi dung va he thong" {
  news
  banners
  policies
  otps
}

Ref: users._id < bookings.user
Ref: fields._id < bookings.field
Ref: vouchers._id < bookings.voucherId
Ref: reviews._id - bookings.reviewId

Ref: users._id < recurring_bookings.customer
Ref: fields._id < recurring_bookings.court
Ref: users._id < recurring_bookings.createdBy

Ref: bookings._id < payments.bookingId
Ref: users._id < payments.userId

Ref: users._id < user_vouchers.userId
Ref: vouchers._id < user_vouchers.voucherId

Ref: users._id < reviews.user
Ref: bookings._id < reviews.booking
Ref: fields._id < reviews.field
Ref: services._id < reviews.service

Ref: users._id < notifications.user

Ref: users._id < conversations.userId
Ref: users._id < conversations.assignedAdminId
Ref: conversations._id < messages.conversationId
Ref: users._id < messages.senderId

Ref: users._id < chat_sessions.userId
Ref: bookings._id < chat_sessions.relatedBooking

Ref: users._id < news.author
Ref: users._id < policies.updatedBy
